<resources>
    <string name="ticket_store">shared_store</string>
    <string name="app_name">TicketTango</string>
    <string name="bgdetails">DETAILS</string>
    <string name="bgdetails2">DETAILS</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Key Details:</string>
    <string name="movie_screening">Key Details:\n • Genre:\n • Director:\n • Studio:\n • Release Date:</string>
    <string name="movie_details">Details:\n • Time:\n • Date:\n</string>
    <string name="get_ticket">Get Ticket</string>
    <string name="ticket_tango">TICKET TANGO</string>
    <string name="log_in_menu">LOG IN MENU</string>
    <string name="logo">logo</string>
    <string name="tvusername">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="tvpassword">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up_menu">SIGN UP MENU</string>
    <string name="create_username">Create UserName</string>
    <string name="create_password">Create Password</string>
    <string name="tvemail">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="movie">MOVIE</string>
    <string name="selection">SELECTION</string>
    <string name="hello">Hello,</string>
    <string name="movie_selection">MOVIE SELECTION</string>
    <string name="mv1">Mv1</string>
    <string name="mv2">Mv2</string>
    <string name="mv3">Mv3</string>
    <string name="mv4">Mv4</string>
    <string name="mv5">Mv5</string>
    <string name="mv6">Mv6</string>
    <string name="mv7">Mv7</string>
    <string name="bgticket">TICKET</string>
    <string name="bgpayment">PAYMENT</string>
    <string name="movie_info">Movie info</string>
    <string name="pay_now">Pay Now</string>
    <string name="pay_nowbtn">Pay Now</string>
    <string name="virtual_ticket">Virtual Ticket</string>
    <string name="movie_ticket_details">Ticket Number\n\nMovie Title\n\nTime and Date</string>
    <string name="qrcode">QRcode</string>
    <string name="clicktosignup">Click to Sign up.</string>
    <string name="movies_selection">movies selection</string>
    <string name="movie_poster_for_payment">Movie Poster for Payment</string>
    <string name="tckicon">tckicon</string>
    <string name="user_name">User_Name</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="welcome_to">Welcome to</string>
    <string name="selectedSeatIds">selectedSeatIds</string>
    <string name="moviesynopsis1">The untold origin story of Optimus Prime and Megatron, better known as sworn enemies, but who once were friends bonded like brothers who changed the fate of Cybertron forever.</string>
    <string name="moviesynopsis2">Struggling with his dual identity, failed comedian Arthur Fleck meets the love of his life, Harley Quinn, while incarcerated at Arkham State Hospital.</string>
    <string name="moviesynopsis3">Reeve\'s rise to becoming a film star follows with a near-fatal horse-riding accident in 1995 that left him paralyzed from the neck down. After the accident, he became an activist for spinal cord injury treatments and disability rights.</string>
    <string name="moviesynopsis4">After a shipwreck, an intelligent robot called Roz is stranded on an uninhabited island. To survive the harsh environment, Roz bonds with the island\'s animals and cares for an orphaned baby goose.</string>
    <string name="UCMoviesynopsis1">Deku, Bakugo, Todoroki and the rest of U.A. High Class 1-A must face off against Dark Might and the obscure crime organisation under his control, the Gollini Family.</string>
    <string name="UCMoviesynopsis2">After receiving an unexpected call from her wayfinding ancestors, Moana journeys to the far seas of Oceania and into dangerous, long-lost waters for an adventure unlike anything she has ever faced.</string>
    <string name="UCMoviesynopsis3">After two decades as one of the most beloved and enduring musicals on the stage, Wicked makes its long-awaited journey to the big screen as a spectacular, generation-defining two-part cinematic event this holiday season.</string>
    <string name="UCMoviesynopsis4">After his home is conquered by the tyrannical emperors who now lead Rome, Lucius is forced to enter the Colosseum and must look to his past to find strength to return the glory of Rome to its people.</string>

</resources>