<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="16dp"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/tvUserGreeting"
        android:text="Welcome,"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp" />
    <TextView
        android:id="@+id/bgUsername"
        android:text="@string/user_name"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/tvUserGreeting"/>


    <TextView
        android:id="@+id/tvMovieSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUserGreeting"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/playfair_display_sc"
        android:text="@string/movie_selection"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/svSelection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvMovieSelect"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/movies_selection">

        <GridLayout
            android:id="@+id/glMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2">

        </GridLayout>
    </ScrollView>

</RelativeLayout>

